[gd_scene load_steps=7 format=3 uid="uid://bd8uyljyvgre5"]

[ext_resource type="FontFile" uid="uid://73q660wrssg2" path="res://assets/fonts/IPix中文像素字体.ttf" id="1_bxd45"]
[ext_resource type="Script" uid="uid://dx4ig0sloegld" path="res://scripts/chat/chat.gd" id="1_xe7gi"]
[ext_resource type="Texture2D" uid="uid://ck87bghdnh0kk" path="res://assets/emoji/emoji.png" id="2_6m6u5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vmxdk"]
atlas = ExtResource("2_6m6u5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n105h"]
atlas = ExtResource("2_6m6u5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tit8u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmxdk")
}],
"loop": true,
"name": &"comfortable",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n105h")
}],
"loop": true,
"name": &"emotional",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xe7gi")

[node name="Text" type="Panel" parent="."]
layout_mode = 0
offset_right = 107.0
offset_bottom = 25.0
scale = Vector2(0.25, 0.25)

[node name="MarginContainer" type="MarginContainer" parent="Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="TextBox" type="Label" parent="Text/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bxd45")
theme_override_font_sizes/font_size = 16
text = "陌生的天花板"

[node name="TextTimer" type="Timer" parent="Text/MarginContainer"]

[node name="Emoji" type="AnimatedSprite2D" parent="."]
position = Vector2(13, 2)
sprite_frames = SubResource("SpriteFrames_tit8u")
animation = &"emotional"

[node name="EmojiTimer" type="Timer" parent="Emoji"]
one_shot = true

[connection signal="timeout" from="Text/MarginContainer/TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="timeout" from="Emoji/EmojiTimer" to="." method="_on_emoji_timer_timeout"]
